# PopulateCSV

./: CHANGELOG.md  CSVComparer.cabal  file1  file2  test.csv
app/: Foldable.hs  Main.hs  Positions.hs  SeedPosition.hs
